update the forgot credentials info.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="login_screen_user_name">Username</string>
     <string name="login_screen_password">Password</string>
     <string name="login_screen_sign_in">Sign In</string>
+    <string name="login_screen_forgot_credentials">Forgot your username/password</string>
     <string name="home_screen_title">Quotes</string>
     <string name="home_screen_quote_service_error">Something went wrong, please try again later.</string>
     <string name="home_Screen_card_item_author">By %s</string>
